# VamVerl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: staged-verify.yml
configs/: runtime_env_vampo_cluster.json  vampo_ppo_trainer.yaml  vampo_ppo_trainer_cluster4.yaml  videomae_droid.yaml
docs/: ARCHITECTURE.md  COMPONENT_REWARD.md  COMPONENT_RL.md  TRAINING_CALL_SEQUENCE.md  VAMPO_LOG_PROB.md  VERIFICATION.md  videomae_loss_plateau_0.2.md
eval_utils/: serve_dreamzero_wan22.py
groot/vla/experiment/: experiment.py
groot/vla/utils/: distributed_load.py  fsdp_sharded_checkpoint.py  spark_gb10_deepspeed.py
scripts/: README.md  bootstrap_init_states.sh  build_init_states_from_droid.sh  dump_wm_rollout.py  ensure_libero_config.py  extract_droid_lerobot_zips.sh  mount_nfs_cluster4.sh  preflight_component2_train.sh  preflight_rl.sh  prep_component2_data_local.sh  setup_nfs_exports_41.sh  sync_vamverl_cluster.sh  train_component2_reward_cluster4.sh  train_component3_rl_cluster4.sh  verify_staged.sh
scripts/checkpoint/: convert_dreamzero_fsdp_checkpoint.py  convert_dreamzero_fsdp_cluster4.sh
scripts/cluster/: mount_nfs_cluster4.sh  setup_nfs_exports_41.sh  sync_vamverl_cluster.sh
scripts/dev/: dump_wm_rollout.py
scripts/preflight/: preflight_component2_train.sh  preflight_rl.sh  verify_staged.sh
scripts/ray/: start_ray_head.sh  start_ray_worker.sh
scripts/train/: train_component2_reward_cluster4.sh  train_component3_rl_cluster4.sh
tests/: test_flow_log_prob_trace.py  test_staged_rl_pipeline.py
vampo/: __init__.py
vampo/core/: __init__.py  types.py
vampo/imagination/: __init__.py  reward_debug.py  rollout.py
vampo/imagination/policy/: __init__.py  base.py  obs_utils.py  runner.py
vampo/integrations/: __init__.py
vampo/integrations/verl/: __init__.py  actor.py  dataset.py  flow_log_prob.py  fsdp_utils.py  grpo_advantage.py  log_prob_utils.py  main_vampo_ppo.py  parallel_utils.py  preflight.py  proto_adapter.py  ray_worker_group.py  reward_manager.py  rollout.py  staged_checks.py  train_progress.py  verify_staged.py  vla_backend.py  vla_policy.py  worker.py
vampo/reward/: __init__.py  build_videomae_clip_dataset.py  build_videomae_ready_split.py  factory.py  train_videomae.py  videomae_dataset.py  videomae_episode.py  videomae_load.py  videomae_reward.py  videomae_train_metrics.py
vampo/rl/: __init__.py
verl/single_controller/ray/: dreamzero_worker_group.py
verl/trainer/: main_dreamzero_ppo.py
verl/trainer/ppo/: core_algos.py  dreamzero_backend.py  dreamzero_grpo.py  dreamzero_reward_manager.py  ray_trainer.py
verl/trainer/preflight/: __init__.py  dreamzero_preflight.py  staged_checks.py  verify_staged.py
verl/utils/: dreamzero_fsdp_utils.py  dreamzero_parallel.py  fsdp_utils.py  import_utils.py  vamverl_env.py
verl/utils/dataset/: __init__.py  dreamzero_init_state.py  rob_dataset.py
verl/utils/debug/: performance.py
verl/workers/: dreamzero_worker.py  fsdp_workers.py
(+40 files in other folders)
