[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vamverl"
version = "0.3.0"
description = "DreamZero GRPO/PPO on verl (VideoMAE reward + FSDP distributed RL)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "numpy>=2,<2.5",
    "omegaconf",
    "transformers>=4.40",
    "safetensors",
    "pillow",
    "tqdm",
    "pyyaml",
    "opencv-python-headless>=4.13.0",
    "msgpack",
    "websockets",
    "huggingface_hub",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
vla = [
    "einops>=0.8",
    "tyro",
    "tianshou>=0.5,<3",
    "albumentations>=1.4",
    "openpi-client>=0.1.1",
    "imageio>=2.34",
    "imageio-ffmpeg",
    "diffusers>=0.30",
    "peft>=0.5",
    "decord2",
    "av>=15",
    "gear",
]
verl = [
    "ray>=2.31",
    "hydra-core>=1.3",
    "tensordict>=0.4",
    "codetiming",
    "packaging",
    "pandas",
    "wandb>=0.16",
]
reward = [
    "webdataset>=0.2",
    "scikit-learn>=1.3",
    "wandb>=0.16",
]

[project.scripts]
vamverl-train = "verl.trainer.main_dreamzero_ppo:main_hydra"
vampo-train = "verl.trainer.main_dreamzero_ppo:main_hydra"
verl-train-dreamzero = "verl.trainer.main_dreamzero_ppo:main_hydra"
vampo-train-videomae = "verl.utils.reward.train_videomae:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["verl*", "groot*", "eval_utils*"]
